[package]
name = "string"
description = "Obvious CLI for basic string manipulation"
license = "GNU"
# homepage = "https://github.com/nilsmartel/string"
repository = "https://github.com/nilsmartel/string"
version = "0.1.1"
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"               # Parse command line argument by defining a struct.
itertools = "0.9.0"          # Extra iterator adaptors, iterator methods, free functions, and macros.
