[package]
name = "shell-string"
version = "0.4.0"
description = "Obvious CLI for basic string manipulation"
license = "Unlicense OR MIT"
# homepage = "https://github.com/nilsmartel/string"
repository = "https://github.com/nilsmartel/string"
readme = "README.md"
keywords = ["shell", "cli", "string", "template", "templating"]
categories = [
    "command-line-utilities",
    "text-editors"
]
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "string"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"               # Parse command line argument by defining a struct.
itertools = "0.9.0"          # Extra iterator adaptors, iterator methods, free functions, and macros.
nom = "6.0.0"                # A byte-oriented, zero-copy, parser combinators library
